--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /sites/example.sites.php
 /sites/example.settings.local.php
 /sites/development.services.yml
+/sites/default/files
 /.csslintrc
 /.editorconfig
 /.eslintignore
