--- a/modules/om_site_settings/om_site_settings.routing.yml
+++ b/modules/om_site_settings/om_site_settings.routing.yml
@@ -1,5 +1,5 @@
 om_site_settings.site_settings_form:
-  path: '/admin/config/development/om_site_settings'
+  path: '/om_site_settings'
   defaults:
     _form: '\Drupal\om_site_settings\Form\SiteSettingsForm'
     _title: 'Site Settings'
